--- a/output/team.html
+++ b/output/team.html
@@ -25,27 +25,27 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Joe</h2>
+        <h2 class="card-title">John</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 462</li>
-            <li class="list-group-item">Email: <a href="mailto:joe@work.com">joe@work.com</a></li>
+            <li class="list-group-item">ID: 4566</li>
+            <li class="list-group-item">Email: <a href="mailto:john@work.com">john@work.com</a></li>
             <li class="list-group-item">Office number: 4</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">John</h2>
+        <h2 class="card-title">Joe</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 757</li>
-            <li class="list-group-item">Email: <a href="mailto:john@work.com">john@work.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/john24" target="_blank" rel="noopener noreferrer">john24</a></li>
+            <li class="list-group-item">ID: 768</li>
+            <li class="list-group-item">Email: <a href="mailto:joe@work.com">joe@work.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/joe24" target="_blank" rel="noopener noreferrer">joe24</a></li>
         </ul>
     </div>
 </div>
@@ -56,9 +56,9 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 757</li>
+            <li class="list-group-item">ID: 768</li>
             <li class="list-group-item">Email: <a href="mailto:pete@work.com">pete@work.com</a></li>
-            <li class="list-group-item">School: Duke</li>
+            <li class="list-group-item">School: Harvard</li>
         </ul>
     </div>
 </div>
